CHANGES-1.1.txt
---------------

CHANGES IN CUPS V1.1.21rc2

	- Updated the cupsaddsmb program to use the new Windows
	  2000 PostScript drivers instead of the Windows NT
	  printer drivers (STR #390)
	- The gziptoany filter did not produce copies for raw
	  print jobs (STR #808)
	- The cupsLangGet() function now uses nl_langinfo(),
	  when available, to get the current encoding (STR #856)
	- Added a ReloadTimeout directive to control how long
	  the scheduler waits for jobs to complete before
	  restarting the scheduler (STR #861)
	- Added a note to the default cupsd.conf file which
	  mentions that you must allow connections from
	  localhost for the command-line and web interfaces to
	  work (STR #850)
	- The IPP backend incorrectly used the local port when
	  communicating with a remote server; this caused
	  problems with some custom configurations (STR #852)
	- The cups-lpd mini-daemon wasn't using the right
	  default banner option (STR #851)
	- Updated the new httpDecode64_2() and httpEncode64_2()
	  functions to handle arbitrary binary data, not just
	  text (STR #860)
	- String options with quotes in their values were not
	  quoted properly by the scheduler (STR #839)
	- Configure script changes for GNU/Hurd (STR #838)
	- The lppasswd program was not installed properly by GNU
	  install when the installer was not root (STR #836)
	- Updated the cups-lpd man page (STR #843)
	- Fixed a typo in the cupsd man page (STR #833)
	- The USB backend now defaults to using the newer
	  /dev/usb/lpN filenames; this helps on systems which
	  use the devfs filesystem type on Linux (STR #818)
	- The config.h file did not define the HAVE_USERSEC_H
	  constant when the configure script detected the
	  usersec.h header file. This caused authentication
	  errors on AIX (STR #832)
	- The lp and lpr commands now report the temporary
	  filename and error if they are unable to create a
	  temporary file (STR #812)
	- Added ServerTokens directive to control the Server