@@ -1,5 +1,5 @@
 /*
- * "$Id: cert.h,v 1.3.2.3 2004/06/29 13:15:10 mike Exp $"
+ * "$Id: cert.h,v 1.3.2.4 2004/08/23 18:01:56 mike Exp $"
  *
  *   Authentication certificate definitions for the Common UNIX
  *   Printing System (CUPS).
@@ -16,7 +16,7 @@
  *       Attn: CUPS Licensing Information
  *       Easy Software Products
  *       44141 Airport View Drive, Suite 204
- *       Hollywood, Maryland 20636-3142 USA
+ *       Hollywood, Maryland 20636 USA
  *
  *       Voice: (301) 373-9600
  *       EMail: cups-info@cups.org
@@ -56,5 +56,5 @@ extern void		InitCerts(void);
 
 
 /*
- * End of "$Id: cert.h,v 1.3.2.3 2004/06/29 13:15:10 mike Exp $".
+ * End of "$Id: cert.h,v 1.3.2.4 2004/08/23 18:01:56 mike Exp $".
  */
