@@ -1,5 +1,5 @@
 /*
- * "$Id: client.h,v 1.17.2.16 2004/07/02 22:15:51 mike Exp $"
+ * "$Id: client.h,v 1.17.2.17 2004/08/23 18:01:56 mike Exp $"
  *
  *   Client definitions for the Common UNIX Printing System (CUPS) scheduler.
  *
@@ -15,7 +15,7 @@
  *       Attn: CUPS Licensing Information
  *       Easy Software Products
  *       44141 Airport View Drive, Suite 204
- *       Hollywood, Maryland 20636-3142 USA
+ *       Hollywood, Maryland 20636 USA
  *
  *       Voice: (301) 373-9600
  *       EMail: cups-info@cups.org
@@ -117,5 +117,5 @@ extern int	WriteClient(client_t *con);
 
 
 /*
- * End of "$Id: client.h,v 1.17.2.16 2004/07/02 22:15:51 mike Exp $".
+ * End of "$Id: client.h,v 1.17.2.17 2004/08/23 18:01:56 mike Exp $".
  */
