@@ -1,5 +1,5 @@
 /*
- * "$Id: conf.h,v 1.36.2.24 2004/08/19 12:46:28 mike Exp $"
+ * "$Id: conf.h,v 1.36.2.25 2004/08/23 18:01:56 mike Exp $"
  *
  *   Configuration file definitions for the Common UNIX Printing System (CUPS)
  *   scheduler.
@@ -16,7 +16,7 @@
  *       Attn: CUPS Licensing Information
  *       Easy Software Products
  *       44141 Airport View Drive, Suite 204
- *       Hollywood, Maryland 20636-3142 USA
+ *       Hollywood, Maryland 20636 USA
  *
  *       Voice: (301) 373-9600
  *       EMail: cups-info@cups.org
@@ -96,8 +96,6 @@ VAR char		*SystemGroups[MAX_SYSTEM_GROUPS],
 					/* GUI program to use for IRIX */
 			*FontPath		VALUE(NULL),
 					/* Font search path */
-			*ReloadTimeout		VALUE(0),
-					/* Timeout before reload from SIGHUP */
 			*RemoteRoot		VALUE(NULL),
 					/* Remote root user */
 			*Classification		VALUE(NULL);
@@ -148,6 +146,8 @@ VAR int			ClassifyOverride	VALUE(0),
 					/* Current filter level */
 			FilterNice		VALUE(0),
 					/* Nice value for filters */
+			ReloadTimeout		VALUE(0),
+					/* Timeout before reload from SIGHUP */
 			RootCertDuration	VALUE(300),
 					/* Root certificate update interval */
 			RunAsUser		VALUE(FALSE),
@@ -197,5 +197,5 @@ extern int	LogPage(job_t *job, const char *page);
 
 
 /*
- * End of "$Id: conf.h,v 1.36.2.24 2004/08/19 12:46:28 mike Exp $".
+ * End of "$Id: conf.h,v 1.36.2.25 2004/08/23 18:01:56 mike Exp $".
  */
