@@ -1,5 +1,5 @@
 /*
- * "$Id: dirsvc.h,v 1.12.2.11 2004/07/02 19:51:24 mike Exp $"
+ * "$Id: dirsvc.h,v 1.12.2.12 2004/08/23 18:01:56 mike Exp $"
  *
  *   Directory services definitions for the Common UNIX Printing System
  *   (CUPS) scheduler.
@@ -16,7 +16,7 @@
  *       Attn: CUPS Licensing Information
  *       Easy Software Products
  *       44141 Airport View Drive, Suite 204
- *       Hollywood, Maryland 20636-3142 USA
+ *       Hollywood, Maryland 20636 USA
  *
  *       Voice: (301) 373-9600
  *       EMail: cups-info@cups.org
@@ -148,5 +148,5 @@ extern void	UpdateSLPBrowse(void);
 
 
 /*
- * End of "$Id: dirsvc.h,v 1.12.2.11 2004/07/02 19:51:24 mike Exp $".
+ * End of "$Id: dirsvc.h,v 1.12.2.12 2004/08/23 18:01:56 mike Exp $".
  */
