@@ -1,5 +1,5 @@
 /*
- * "$Id: file.h,v 1.1.2.4 2004/06/29 13:15:10 mike Exp $"
+ * "$Id: file.h,v 1.1.2.5 2004/08/23 18:01:56 mike Exp $"
  *
  *   File definitions for the Common UNIX Printing System (CUPS).
  *
@@ -20,7 +20,7 @@
  *       Attn: CUPS Licensing Information
  *       Easy Software Products
  *       44141 Airport View Drive, Suite 204
- *       Hollywood, Maryland 20636-3142 USA
+ *       Hollywood, Maryland 20636 USA
  *
  *       Voice: (301) 373-9600
  *       EMail: cups-info@cups.org
@@ -104,5 +104,5 @@ extern int		cupsFileWrite(cups_file_t *fp, const char *buf, int bytes);
 #endif /* !_CUPS_FILE_H_ */
 
 /*
- * End of "$Id: file.h,v 1.1.2.4 2004/06/29 13:15:10 mike Exp $".
+ * End of "$Id: file.h,v 1.1.2.5 2004/08/23 18:01:56 mike Exp $".
  */
