@@ -1,5 +1,5 @@
 /*
- * "$Id: job.h,v 1.25.2.14 2004/07/02 19:12:48 mike Exp $"
+ * "$Id: job.h,v 1.25.2.15 2004/08/23 18:01:56 mike Exp $"
  *
  *   Print job definitions for the Common UNIX Printing System (CUPS) scheduler.
  *
@@ -15,7 +15,7 @@
  *       Attn: CUPS Licensing Information
  *       Easy Software Products
  *       44141 Airport View Drive, Suite 204
- *       Hollywood, Maryland 20636-3142 USA
+ *       Hollywood, Maryland 20636 USA
  *
  *       Voice: (301) 373-9600
  *       EMail: cups-info@cups.org
@@ -111,5 +111,5 @@ extern void	UpdateJob(job_t *job);
 
 
 /*
- * End of "$Id: job.h,v 1.25.2.14 2004/07/02 19:12:48 mike Exp $".
+ * End of "$Id: job.h,v 1.25.2.15 2004/08/23 18:01:56 mike Exp $".
  */
