@@ -1,5 +1,5 @@
 /*
- * "$Id: mime.h,v 1.3.2.9 2004/06/29 13:15:11 mike Exp $"
+ * "$Id: mime.h,v 1.3.2.10 2004/08/23 18:01:56 mike Exp $"
  *
  *   MIME type/conversion database definitions for the Common UNIX Printing System (CUPS).
  *
@@ -15,7 +15,7 @@
  *       Attn: CUPS Licensing Information
  *       Easy Software Products
  *       44141 Airport View Drive, Suite 204
- *       Hollywood, Maryland 20636-3142 USA
+ *       Hollywood, Maryland 20636 USA
  *
  *       Voice: (301) 373-9600
  *       EMail: cups-info@cups.org
@@ -143,5 +143,5 @@ extern mime_filter_t	*mimeFilter(mime_t *mime, mime_type_t *src, mime_type_t *ds
 #endif /* !_CUPS_MIME_H_ */
 
 /*
- * End of "$Id: mime.h,v 1.3.2.9 2004/06/29 13:15:11 mike Exp $".
+ * End of "$Id: mime.h,v 1.3.2.10 2004/08/23 18:01:56 mike Exp $".
  */
